[tool.poetry]
name = "monnt.py"
version = "0.1.0"
description = ""
authors = ["Thomas Schmitt <t.e.schmitt@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
tortoise-orm = "^0.19.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.2"
aerich = "^0.6.2"
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.18.1"
isort = "^5.10.1"


[tool.aerich]
tortoise_orm = "settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.black]
include = '\.pyi?$'
target-version = ["py36", "py37", "py38", "py39"]
preview = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
