[tool.poetry]
name = "monnt.py"
version = "0.1.0"
description = "An async RFC 3977 compliant Usenet server"
authors = ["Thomas Schmitt <t.e.schmitt@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.7.1"
tortoise-orm = "^0.19.0"
# py-dtn7 = {path = "../py-dtn7", develop = true}
py-dtn7 = "0.2.1-alpha4"
toml = "^0.10.2"
pytimeparse2 = "^1.5.0"
websockets = "^10.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.3.0"
pre-commit = "^2.18.1"
isort = "^5.10.1"

# Settings for the moNNT.py NNTP server
# For, "env", following settings are possible:
#   - "dev": development environment, this will load config.dev.toml
#   - "prod": production environment, this will load config.prod.toml

[tool.poetry.group.dev.dependencies]
flameprof = "^0.4"

[monntpy]
env = "dev"

[tool.black]
include = '\.pyi?$'
line-length = 100
target-version = ["py37", "py38", "py39"]
preview = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
